Fixed: compare--list z-index

--- a/src/style/base/common.scss
+++ b/src/style/base/common.scss
@@ -851,7 +851,7 @@ a{
     li{
       width: 50%;
       position: relative;
-      z-index: 10000;
+      z-index: 11;
       display: flex;
       margin-bottom: 1rem;
       margin-top: 0.8rem;
